# observability-assistant-router

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
config/: agents.yaml
src/router/: __init__.py  main.py
src/router/a2a/: __init__.py  client.py  translator.py
src/router/agents/: __init__.py  proxy.py  retry.py
src/router/agui/: __init__.py  client.py  endpoint.py  models.py
src/router/config/: __init__.py  agents.py  reloader.py  settings.py  watcher.py
src/router/observability/: __init__.py  audit.py  buffer.py  models.py
src/router/routing/: __init__.py  drift.py  llm_fallback.py  mention.py  semantic.py
src/router/session/: __init__.py  state.py  store.py
tests/: __init__.py  conftest.py  test_agui_client.py  test_agui_endpoint.py  test_agui_models.py  test_config.py  test_drift.py  test_error_handling.py  test_health.py  test_hot_reload.py  test_llm_fallback.py  test_mention.py  test_observability.py  test_retry.py  test_routing.py  test_session.py  test_sticky_sessions.py  test_translator.py
